--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <nav class="cabecalho__menu">
             <a class="cabecalho__menu__link" href="index.html">Home</a>
             <a class="cabecalho__menu__link" href="pages/sobre.html">Sobre</a>
-            <a class="cabecalho__menu__link" href="/assets/Arian Weslley Maio 23.pdf" target="_blank">CV</a>
+            <a class="cabecalho__menu__link" href="assets/Arian Weslley - Junho 23.pdf" target="_blank">CV</a>
         </nav>
     </header>
 
