--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
     <title>Portfólio / Arian Weslley</title>
     <link rel="stylesheet" href="css/style.css">
     <script src="js/script.js" defer></script>
-    <link rel="icon" type="image/x-icon" href="assets/icons8-blue-circle-96.png">
+
+    <!-- ICONS -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <!-- END ICONS -->
 </head>
 <body>
     <header class="cabecalho">
