--- a/index.html
+++ b/index.html
@@ -38,9 +38,10 @@
             </ul>
         </nav>
         <main class="content">
-            <div class="titulo">
+            <div class="titulo col-wide">
                 <h1>Eleve seu negócio digital a outro nível <strong class="titulo-destaque">com qualidade!</strong></h1>
             </div>
+            <!--
             <div class="caracteristicas">
                 <div>
                     <span class="numero">6</span>
@@ -55,12 +56,13 @@
                     <span class="rotulo">formações na alura</span>
                 </div>
             </div>
+            -->
 
             <img src="assets/img/navelogic.jpg" alt="Arian Weslley de perfil, praia ao fundo." class="col-wide imagem-1">
 
             <p class="col-wide">Olá! Me chamo Arian Weslley, sou um desenvolvedor Full-Stack apaixonado por tecnologia, com expertise em Java, Angular, HTML, CSS e Javascript/Typescript.</p>
 
-            <img src="assets/img/senac.jpg" alt="Turma do Senac 21.1 reunida ao redor do professor Fabiano.">
+            <img class="col-wide" src="assets/img/senac.jpg" alt="Turma do Senac 21.1 reunida ao redor do professor Fabiano.">
 
             <p>No curso de técnico de informática tive a oportunidade de ampliar meus conhecimentos nas tecnologias de programação, como PHP, Java e Typescript. Além disso, adquiri habilidades na construção de aplicações web com HTML, CSS, Javascript, Angular e Ionic, tornando-me apto a atuar como desenvolvedor Full-Stack.</p>
 
