--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <a href="https://navelogic.github.io/Portfolio/" class="logo" id="logo"><img src="assets/svg/Navelogic.svg" alt="Navelogic"></a>
             <nav>
                 <ul>
-                    <li><a href="#">Curriculum vitæ</a></li>
+                    <li><a href="assets/Arian Weslley - Junho 23.pdf" target="_blank">Curriculum vitæ</a></li>
                 </ul>
             </nav>
         </header>
