--- a/index.html
+++ b/index.html
@@ -73,12 +73,13 @@
                 <p>“💫 Fecho os olhos e vejo códigos.”</p>
             </blockquote>
 
-            <ul class="atributos">
+            <ul class="atributos col-wide">
                 <li>Nasci em 20/12/2001</li>
                 <li>Botafoguense</li>
                 <li>De Niterói</li>
                 <li>Java 🤝 Angular</li>
                 <li>Sempre estudando</li>
+                <li>Apaixonado por praia 🏖</li>
             </ul>
         </main>
         <aside class="x">
