Deixando o Texto Maior

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <p>Mas, dentro do Senac também fiz outro curso super essencial para meu aprendizado! No curso de PHP com Programação Orientada a Objetos, tive a oportunidade de ampliar meus conhecimentos na linguagem, aprendendo conceitos básicos e intermediários. Além disso, outro ponto fundamental destacado no curso foi o uso de padrões de projeto, como MVC e Arquitetura Limpa, que permitiram aplicar os conceitos em projetos práticos.</p>
 
             <blockquote class="citacao col-wide">
-                <p>“💫 Fecho os olhos e vejo códigos.”</p>
+                <p>"💫 Ao fechar os olhos, mergulho em um universo de códigos e possibilidades infinitas."</p>
             </blockquote>
 
             <ul class="atributos col-wide">
