--- a/index.html
+++ b/index.html
@@ -42,22 +42,26 @@
             <div class="titulo col-wide">
                 <h1>Eleve seu negócio digital a outro nível <strong class="titulo-destaque">com qualidade!</strong></h1>
             </div>
-            <!--
+            
             <div class="caracteristicas">
                 <div>
                     <span class="numero">6</span>
                     <span class="rotulo">meses na área</span>
                 </div>
                 <div>
-                    <span class="numero">86</span>
-                    <span class="rotulo">seguidores</span>
+                    <span class="numero">89</span>
+                    <span class="rotulo">seguidores no X</span>
                 </div>
                 <div>
                     <span class="numero">2</span>
                     <span class="rotulo">formações na alura</span>
                 </div>
+                <div>
+                    <span class="numero">2</span>
+                    <span class="rotulo">cursos técnicos</span>
+                </div>
             </div>
-            -->
+        
 
             <img src="assets/img/navelogic.jpg" alt="Arian Weslley de perfil, praia ao fundo." class="col-wide imagem-1">
 
