--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
 
             <img class="col-wide" src="assets/img/senac.jpg" alt="Turma do Senac 21.1 reunida ao redor do professor Fabiano.">
 
-            <p>No curso de técnico de informática tive a oportunidade de ampliar meus conhecimentos nas tecnologias de programação, como PHP, Java e Typescript. Além disso, adquiri habilidades na construção de aplicações web com HTML, CSS, Javascript, Angular e Ionic, tornando-me apto a atuar como desenvolvedor Full-Stack.</p>
+            <p class="col-wide">No curso de técnico de informática tive a oportunidade de ampliar meus conhecimentos nas tecnologias de programação, como PHP, Java e Typescript. Além disso, adquiri habilidades na construção de aplicações web com HTML, CSS, Javascript, Angular e Ionic, tornando-me apto a atuar como desenvolvedor Full-Stack.</p>
 
-            <p>Mas, dentro do Senac também fiz outro curso super essencial para meu aprendizado! No curso de PHP com Programação Orientada a Objetos, tive a oportunidade de ampliar meus conhecimentos na linguagem, aprendendo conceitos básicos e intermediários. Além disso, outro ponto fundamental destacado no curso foi o uso de padrões de projeto, como MVC e Arquitetura Limpa, que permitiram aplicar os conceitos em projetos práticos.</p>
+            <p class="col-wide">Mas, dentro do Senac também fiz outro curso super essencial para meu aprendizado! No curso de PHP com Programação Orientada a Objetos, tive a oportunidade de ampliar meus conhecimentos na linguagem, aprendendo conceitos básicos e intermediários. Além disso, outro ponto fundamental destacado no curso foi o uso de padrões de projeto, como MVC e Arquitetura Limpa, que permitiram aplicar os conceitos em projetos práticos.</p>
 
             <blockquote class="citacao col-wide">
                 <p>"💫 Ao fechar os olhos, mergulho em um universo de códigos e possibilidades infinitas."</p>
