--- a/index.html
+++ b/index.html
@@ -53,8 +53,10 @@
                     <span class="rotulo">seguidores no X</span>
                 </div>
                 <div>
-                    <span class="numero">3</span>
-                    <span class="rotulo">formações na alura</span>
+                    <a href="https://cursos.alura.com.br/vitrinedev/weslleysantoszbd" target="_blank">
+                        <span class="numero">3</span>
+                        <span class="rotulo">formações na alura</span>
+                    </a>
                 </div>
                 <div>
                     <span class="numero">2</span>
@@ -89,6 +91,9 @@
         <aside class="x">
             <a class="twitter-timeline" href="https://twitter.com/offarianweslley?ref_src=twsrc%5Etfw">Tweets by offarianweslley</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
         </aside>
+        <footer class="footer">
+            <p>Desenvolvido com ❤️ por <a href="https://navelogic.github.io/Portfolio/" target="_blank">Arian Weslley</a></p>
+        </footer>
     </div>
 </body>
 </html>
